After adding Charts for KPI

--- a/app/views/factors/index.html.haml
+++ b/app/views/factors/index.html.haml
@@ -1,5 +1,5 @@
 # coding: utf-8
-%h1 Список показателей 
+%h1 Показатели 
 
 .content
   %table.data
@@ -10,4 +10,4 @@
         %td= link_to f.name, :action => 'show', :id => f
 %br	
 .actions
-  = link_to 'Добавить показатель', :action => 'new'		
+  = link_to 'Добавить', :action => 'new'		
