--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,13 +5,13 @@
     %title VBR-Bank
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=UTF-8' }
     = stylesheet_link_tag 'application'
-    = javascript_include_tag 'http://code.jquery.com/jquery-1.5.js', 'rails', 'application'
+    = javascript_include_tag 'http://code.jquery.com/jquery-1.5.js', 'rails', 'application', 'highcharts'
     = csrf_meta_tag
 
 
   %body
   #header
-    %h2 «ВСЕУКРАИНСКИЙ БАНК РАЗВИТИЯ»
+    %h2 ВСЕУКРАИНСКИЙ БАНК РАЗВИТИЯ
   #search
     
     #navigation
